--- a/views/product.html
+++ b/views/product.html
@@ -6,9 +6,9 @@
 <body>
 hello {{user.name}}
 <ul>
-    {% for user in users %}
+    {% for city in cityes %}
     <li>
-        {{ user.name }}
+        {{ city.length }}
     </li>
     {% endfor %}
 </ul>
