total new framework updates upgrading to 0.9.8

--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{{title}}</title>
-    {{style}}
-    {{script}}
-</head>
-<body>
-<div id="top">{% include top %}</div>
-<div id="center">{% include center %}</div>
-<div id="bottom">{% include bottom %}</div>
-</body>
+    <head>
+        {% include head %}
+    </head>
+    <body class="light-bg home">
+        {% include header %}
+
+        {% include content %}
+
+        {% include footer %}
+    </body>
 </html>
