core bug fixes: - fixing session engine - fixing interceptor export
new features:
- add export variable buy reference and by value
- add export to theme

--- a/app/views/default/regions/head.html
+++ b/app/views/default/regions/head.html
@@ -11,7 +11,7 @@
     http://getelegant.com/start.html#managing-static
 -->
 
-{% for bundle in RESOURCES %}
+{% for bundle in VIEW.RESOURCES %}
     {% if bundle.compact %} <!-- check if compact resources is enabled -->
         {% if bundle.type == "css" %}
             {% if bundle.cache && bundle.inline %} <!-- check if this bundle should be printed inline -->
